# plum-claims-processing-system

./: .dockerignore  .gitignore  ARCHITECTURE.md  COMPONENT_CONTRACTS.md  DEPLOYMENT.md  Dockerfile  EVAL_REPORT.md  README.md  implementation_plan.md  nginx.conf  supervisord.conf  wait_for_services.py
backend/: .env.example  pyproject.toml  run_eval_cli.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: cross_verifier.py  decision_maker.py  document_parser.py  document_validator.py  orchestrator.py  policy_evaluator.py
backend/app/api/: claims.py  documents.py
backend/app/db/: database.py
backend/app/models/: claim.py  document.py  policy.py  trace.py
backend/app/services/: llm_service.py  policy_service.py
backend/tests/: test_antigravity_sdk.py  test_cursor_sdk.py  test_nvidia_sdk.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/claims/[id]/: page.tsx
frontend/src/app/claims/new/: page.tsx
frontend/src/app/eval/: page.tsx
frontend/src/lib/: api.ts  types.ts
tasks/: lessons.md  todo.md
